GNOME Bugzilla – Bug 791391
gl: error message when wayland display is not found
Last modified: 2017-12-11 21:50:20 UTC
gstreamer-vaapi uses gst_gl_ensure_element_data() to get o create a GL display if it is available. The creation of a gl display in gst_gl_display_new() is a try-and-error mechanism. Since commit 472b8a37 not Wayland display is tried first in gst_gl_display_new(). The problem is, if the windowing system is XOrg, an error log message is printed in console: 0:00:00.263750821 22854 0x7fffec17aa80 ERROR gldisplay gstgldisplay_wayland.c:131:gst_gl_display_wayland_new: Failed to open Wayland display connection. The same happened, before commit 472b8a37, when running Wayland without XWayland support. My proposal is to demote the error level for the functions gst_gl_*_new() to INFO or WARNING
Created attachment 365247 [details] [review] gl: display: demote error level at display creation error
Comment on attachment 365247 [details] [review] gl: display: demote error level at display creation error Seems fine to me. I have no opinion on WARNING vs. INFO, but leaning towards INFO as these are often normal and expected failure cases.
Attachment 365247 [details] pushed as c0d87b5 - gl: display: demote error level at display creation error