gl: display: demote error level at display creation error

https://bugzilla.gnome.org/show_bug.cgi?id=791391